<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot</name>
  <version>0.0.0</version>
  <description>ROS 2 package for controlling a robot</description>
  <maintainer email="ahmed0142005944@gmail.com">Compo</maintainer>
  <license>Apache License 2.0</license> <!-- Replace with your actual license -->

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend> <!-- Build tool dependency -->
  <build_depend>rclpy</build_depend> <!-- ROS 2 Python client library -->
  <build_depend>geometry_msgs</build_depend> <!-- Example: Geometry messages -->

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Optional: Export configuration -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
